Change margin and alignment on the images at the bottom of the page, add a discovered bug to the README.

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,13 +77,6 @@ body {
   text-indent: 15px;
 }
 
-.center-images {
-  text-align: center;
-  margin: auto;
-  display: block;
-  margin-bottom: 15px;
-}
-
 .title-box {
   background-color: rgb(255, 234, 238);
   width: 500px;
@@ -94,19 +87,20 @@ body {
   box-sizing: border-box;
   text-align: center;
   display: block;
-  margin-bottom: 20px;
   color: black;
 }
 
 .grid-image {
-  float: left;
   height: 200px;
   width: auto;
+  padding: 0px;
   border: 5px solid black;
   background-color: black;
+  margin: 0px;
 }
 
 .col-12 {
+  margin: 1.3%;
   padding: 0px;
 }
 
